--- a/.env
+++ b/.env
@@ -1,11 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# Connect to Supabase via connection pooling
+DATABASE_URL="postgresql://postgres.hyfeaseyueuhknopsqpk:ShifB_Supabase@aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
-# The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres 
-# server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
-# one found in a remote Prisma Postgres URL, does not contain any sensitive information.
-
-DATABASE_URL="file:./dev.db"
+# Direct connection to the database. Used for migrations
+DIRECT_URL="postgresql://postgres.hyfeaseyueuhknopsqpk:ShifB_Supabase@aws-1-ap-northeast-1.pooler.supabase.com:5432/postgres"
