--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@supabase/supabase-js": "^2.78.0",
     "html-react-parser": "^5.2.6",
     "next": "14.2.16",
     "react": "^18",
