--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "@supabase/supabase-js": "^2.78.0",
+    "@types/uuid": "^10.0.0",
     "html-react-parser": "^5.2.6",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^7.9.3",
-    "react-select": "^5.10.2"
+    "react-select": "^5.10.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
