--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
     "uuid": "^13.0.0"
