--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
+    "swr": "^2.3.6",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
