--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "prisma:push": "dotenv -e .env.local -- npx prisma db push"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
     "@supabase/supabase-js": "^2.78.0",
     "@types/uuid": "^10.0.0",
     "html-react-parser": "^5.2.6",
@@ -24,6 +23,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@prisma/client": "^6.18.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -33,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8.5.6",
+    "prisma": "^6.18.0",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
