--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@supabase/supabase-js": "^2.78.0",
     "@types/uuid": "^10.0.0",
     "html-react-parser": "^5.2.6",
-    "next": "14.2.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
